# Argus

./: .env.example  .gitignore  DATA_OPTIONS.md  README.md  RESULTS.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
assets/: argus-mandala.html
docs/: ml-risk-layer.md
scripts/: analyze.py  argus.py  argus_web.py  ask.py  audit_firewall.py  backfill_unadjusted.py  bench_chat.py  bench_llm.py  build_confidence_calibration.py  build_delistings.py  build_intrinio_universe.py  capture_screenshots.py  check_edgar.py  diagnose_ic.py  eval_narration.py  fetch_intrinio_prices.py  ingest_fsds.py  ingest_prices.py  narrate.py  ops.py  run_distress.py  run_distress_overlay.py  run_drawdown_head.py  run_gate.py  run_momentum_test.py  run_phase1.py  run_phase3.py  run_reversal_matched_horizon.py  run_reversal_test.py  run_unadjusted_liquidity_rebaseline.py  run_value_pit_test.py  scan.py  train_model.py  view.py
src/stockscan/: __init__.py  backtest.py  concepts.py  confidence.py  config.py  distress.py  drawdown.py  features.py  model.py  (+15 more)
static/: app.js  charts.js  index.html  styles.css
tests/: test_analyst_panel.py  test_assist.py  test_backtest.py  test_chart.py  test_concepts.py  test_confidence.py  test_delistings.py  test_distress.py  test_drawdown.py  test_explain_move.py  test_features.py  test_fsds.py  test_fundamental_panel.py  test_ground.py  test_horizons.py  test_housekeeping.py  test_intrinio_universe.py  test_llm_client.py  test_marketcap.py  test_matrix_cache.py  test_model.py  test_momentum_features.py  test_narrate.py  test_narrate_cache.py  test_news.py  test_newsmem.py  test_notify.py  test_ops_health.py  test_ops_jobs.py  test_ops_monitor.py  test_ops_paper.py  test_ops_progress.py  test_ops_state.py  test_panel.py  test_pit.py  test_portfolio.py  test_prices.py  test_profile.py  test_regime.py  test_reversal_features.py  (+16 more)
(+55 files in other folders)
