[project]
name = "stock-analysis"
version = "0.0.1"
description = "Argus — a survivorship-free, point-in-time quantitative equity scanner: parse -> compute (ML) -> narrate. See README.md."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16",
    "duckdb>=1.0",
    "scipy>=1.13",
    "python-dateutil>=2.9",
    "yfinance>=0.2",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    # shap (narration attribution, Phase 4) is added later — it drags in numba/llvmlite
    # which needs version pinning on Python 3.12.
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
# argus — the terminal UI (a thin viewer over the serve/ops layer). Optional so the
# nightly ingestion/monitor machinery never needs it: `uv sync --extra ui`.
ui = [
    "textual>=0.80",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stockscan"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
